syntax = "proto3";
option java_multiple_files = true;
option java_package="billing";


service BillingService{
  rpc CreateBillingAccount(BillingRequest) returns (BillingResponse);
  rpc UpdateBillingStatus(UpdateBillingRequest) returns  (UpdateBillingRequest);
 }

message BillingRequest{
  string patientId=1;
  string patientName = 2;
  string patientEmail=3;
}

message  BillingResponse {
string accountId = 1;
string patientName=2;
string patientId = 3;
}

message UpdateBillingRequest{
  string accountId =2;
  string paymentStatus = 3;
}

message UpdateBillingResponse {
  string patientName = 1;
  string paymentStatus = 2;
}